--- a/inst/exercises/isotopeExchange/waterExchange/evaporation.Rmd
+++ b/inst/exercises/isotopeExchange/waterExchange/evaporation.Rmd
@@ -240,15 +240,15 @@ WaterEvapPrecip <-function(t, state, pars) {
          kb = kb,             # m h-1
          kf = kf,             # mol m-2 h-1
          
-         # volumes
-         Vgas.m3 = Vvap,      # gas phase
-         Vliq.L  = Vliq*1e3,  # liquid phase
-         Vtot.m3 = Vtot,      # total (gas+liquid)
+         # volumes, m3
+         Vgas = Vvap,         # gas phase
+         Vliq = Vliq,         # liquid phase
+         Vtot = Vtot,         # total (gas+liquid)
          
-         # pressures
-         Pvap = Pvap,         # partial pressure of vapor, Pa
-         Pair = Pair/101325,  # partial pressure of air, atm
-         Pgas = Ptot/101325,  # total gas pressure (vapor+air), atm
+         # pressures, Pa
+         Pvap = Pvap,  # partial pressure of vapor
+         Pair = Pair,  # partial pressure of air
+         Pgas = Ptot,  # total gas pressure (vapor+air)
          
          # fractions
          xvap = Nvap/(Nvap+Nair), # molar fraction of vapor, Eq. 11
@@ -262,11 +262,11 @@ WaterEvapPrecip <-function(t, state, pars) {
 
 ## Model solution
 
-First, we define a function that returns the values of state variables and model parameters based on the conditions defined by the problem (i.e., initial volumes and relative air humidity).
+First, we define a function that returns the values of state variables and model parameters based on the conditions defined by the problem (i.e., initial total volume, initial volume of the liquid water, initial relative humidity, and initial temperature).
 
 ```{r}
 find_state_pars <- function(Vtot, Vliq, humid, TK){
-  # volume of the vapor (=gas phase)
+  # volume of the vapor (=gas phase) = total - liquid
   Vvap <- Vtot - Vliq
 
   # amounts of vapor, liquid, and air in the gas phase
@@ -275,55 +275,67 @@ find_state_pars <- function(Vtot, Vliq, humid, TK){
   Nair <- Pext * Vvap/(Rgas*TK) - Nvap
   
   # output: state variables and parameters
-  SV   <- c(Nvap = Nvap, Nliq = Nliq)
-  pars <- c(TK = TK, Nair = Nair)
-  return(list(SV=SV, pars=pars))
+  return(list(SV   = c(Nvap = Nvap, Nliq = Nliq), 
+              pars = c(TK = TK, Nair = Nair)))
 }
 ```
 
-Now, we can use the above function to generate the initial conditions and model parameters and use it to solve the model over the first hour.
+Now, we use the above function to generate the initial conditions and model parameters and solve the model over the first hour.
 
-```{r}
+```{r, message=FALSE}
 # initial conditions
-ini   <- find_state_pars(Vtot=1, Vliq=1e-3, humid=0.5, TK=TK1)
-pars  <- ini$pars
-SVini <- ini$SV
-
-require(deSolve)
+ini   <- find_state_pars(Vtot=1, Vliq=1e-3, humid=0, TK=TK1)
 
 # solve the model over the first hour
-outtimes <- seq(from = 0, to = 1, length.out = 100) # time in hr
-out1 <- ode(y = SVini, parms = pars, func = WaterEvapPrecip, times = outtimes)
+outtimes <- seq(from = 0, to = 0.5, length.out = 100) # time in hr
+require(deSolve)
+out1 <- ode(y = ini$SV, parms = ini$pars, func = WaterEvapPrecip, times = outtimes)
 ```
 
-Subsequently, we use the end values of the first model run to calculate the initial condition for the model run over the second hour. We consider an ideal gas law when calculating the new volume of the gas phase during cooling from $T_1$ to $T_2$.
-
-WORK in progress...
+In the last step, we use the end values of the first model run to calculate the initial conditions for the second model run. The gas was cooled from $T_1$ to $T_2$ at a constant pressure. Thus, the pressures (including the total pressure as well as the partial pressures of the components in the gas phase) do not change. However, the volume of the gas phases decreases by a factor $T_2/T_1$, as follows from the ideal gas law. Also, the equilibrium pressure decreases and, subsequently, the relative humidity increases as a result of the cooling. The change in the volume of the liquid due to cooling is neglected. 
 
 ```{r}
-SVini2 <- tail(out1[,c("Nvap","Nliq")],1)
+# calculate new initial conditions
+SV   <- out1[nrow(out1),]                      # end of the previous run
+humid.new <- 
+Vtot.new  <- 
+ini2 <- find_state_pars(
+           Vtot  = SV[["Vgas"]]*TK2/TK1 + # isobaric cooling, gas volume changes
+                   SV[["Vliq"]],          # change in liquid volume neglected
+           Vliq  = SV[["Vliq"]], 
+           humid = SV[["Pvap"]]/Peq_vapor(TK=TK2), 
+           TK    = TK2)
 
+# run the model using the new initial conditions and model parameters
+out2 <- ode(y = ini2$SV, parms = ini2$pars, func = WaterEvapPrecip, times = outtimes)
 ```
 
-We plot the number of water molecules in the model reservoirs:
+## Results
 
-```{r, fig.height=8, fig.width=8}
-plot(out1,
-     #which=c("Nvap",   "Nliq",
-     #         "evaporation","precipitation"),
-     xlab="time (hr)", lty=1, las=1, lwd=2, mfrow=c(3,4),
-     ylab="mol O2")
+Here we plot selected results of both model runs.
+
+```{r, fig.height=4.5, fig.width=8, fig.cap="Top: Vapor pressure (Pvap), volume of liquid water (Vliq), molar fraction of vapor pressure in the gas phase (xvap), and relative air humidity (humid). Bottom: amounts of molecules of water vapor (Nvap), liquid (Nliq), total water (vapor + liquid; Ntot.water), and air (Ntot.air)."}
+plot(out1, out2,
+     which=c("Pvap", "Vliq", "xvap", "humid", 
+             "Nvap", "Nliq", "Ntot.water","Ntot.air"),
+     xlab="time (hr)", lty=1, las=1, lwd=2, mfrow=c(2,4),
+     ylab=c("Pa", "m3", "-", "-", rep("mol",3)))
+legend("bottomright", title="temperature (K):",
+       legend=c(sprintf("%.1f",ini$pars["TK"]), 
+                sprintf("%.1f",ini2$pars["TK"])), 
+       lty=1, lwd=2, col=1:2, bty="n")
 ```
 
-```{r, eval=FALSE, fig.height=4, fig.width=8}
-plot(out1, out1, out2, 
-     which=c("delta_LiqB_vs_LiqA","delta_Vap_vs_LiqA"),
-     xlab="time (days)", las=1, lwd=2, lty=1, mfrow=c(1,2))
-abline(h=pars1["delta"], lty=2, col=2)
-abline(h=pars2["delta"], lty=2, col=3)
-legend("bottomright", title="delta (permil):",
-       legend=c(sprintf("%.1f",pars["delta"]), 
-                sprintf("%.1f",pars1["delta"]),
-                sprintf("%.1f",pars2["delta"])), 
-       lty=1, lwd=2, col=1:3, bty="n")
+```{r, fig.height=2.5, fig.width=8, fig.cap="Process rates and the corresponding rate constants (Eq. 1)."}
+plot(out1, out2,
+     which=c("R.evaporation", "R.precipitation", "kf","kb"),
+     xlab="time (hr)", lty=1, las=1, lwd=2, mfrow=c(1,4),
+     ylab=c("mol h-1", "mol h-1", "mol m-2 h-1", "m h-1"))
+```
+
+```{r, fig.height=5, fig.width=8, fig.cap="Pressures and volumes of the system components."}
+plot(out1, out2,
+     which=c("Pvap", "Pair", "Pgas", "Vgas", "Vliq", "Vtot"),
+     xlab="time (hr)", lty=1, las=1, lwd=2, mfrow=c(2,3),
+     ylab=c(rep("Pa",3), rep("m3",3)))
 ```
